ecmascript/parser/tests/typescript-errors/tsc/es7/exponentiationOperator/exponentiationOperatorInTemplateStringWithSyntaxError1/input.ts.stderr
error: ** cannot be applied to unary expression
 --> $DIR/tests/typescript-errors/tsc/es7/exponentiationOperator/exponentiationOperatorInTemplateStringWithSyntaxError1/input.ts:9:18
  |
9 | `${1 + typeof t1 ** t2 ** t1}`;
  |                  ^^

